deploy/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: podinfo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
spec:
  hosts:
  - "*"
  gateways:
  - podinfo-gateway
  http:
  - match:
    - uri:
        prefix: /v4
      rewrite:
        uri: /api/info
    route:
    - destination:
        host: backend
        subset: v4
        port:
          number: 9898
      weight: 95
  - match:
    - uri:
        prefix: /v5
      rewrite:
        uri: /api/info
    route:
    - destination:
          host: backend
          subset: v5
          port:
            number: 9898
      
  - name: "default"
    route:
    - destination:
        host: frontend
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend
spec:
  host: backend
  subsets:
  - name: v4
    labels:
      version: v4
  - name: v5
    labels:
      version: v5
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: v2podinfo
spec:
  hosts:
  - "*"
  gateways:
  - podinfo-gateway
  http:
  - match:
    - uri:
        prefix: /v2
    rewrite:
      uri: /api/info
    route:
    - destination:
        host: backend
        subset: v5
        port:
          number: 9898
  - name: "default"
    route:
    - destination:
        host: frontend
---
